--- a/package.json
+++ b/package.json
@@ -5,5 +5,16 @@
   "main": "index.js",
   "repository": "git@github.com:GabrielOarga/test-project-please-ignore.git",
   "author": "GabrielOarga <13384992+GabrielOarga@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/polyfill": "^7.4.0",
+    "react": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.29.6"
+  }
 }
